* Fix - Return a fresh instance of the renewal order after creating it. Fixes caching issues on HPOS sites where the returned order has no line items.
* Fix - Processing a manual renewal order with HPOS and data syncing enabled correctly saves the related order cache metadata on the subscription and prevents the post and order meta data getting out of sync.
* Update - Refactor the `wcs_is_subscription` helper function to support HPOS.
* Update - Refactor our Related Orders data store classes (WCS_Related_Order_Store_Cached_CPT and WCS_Related_Order_Store_CPT) to use CRUD methods to support subscriptions and orders stored in HPOS.
* Update - Display related orders table when viewing the new "Edit Order" page (HPOS enabled stores).
* Fix - On HPOS stores, make sure the links in the related-orders table redirect to the new Edit Order URL.
* Dev - Removed the deprecated "wcs_subscriptions_for_{$relation_type}_order" dynamic hook used to filter the list of related subscriptions for the given relation type. The following hooks have been removed with no alternative:
        wcs_subscriptions_for_renewal_order
        wcs_subscriptions_for_switch_order
        wcs_subscriptions_for_resubscribe_order
* Dev - Introduce a WC_Subscription::set_status() function to handle subscriptions set with a draft or auto-draft status. Replaces the need for the overriding WC_Subscription::get_status() which has been deleted.

= 5.0.0 - 2022-11-14 =
* Dev - The library has been bumped to version to 5.0.0 to reduce confusion with the version of WooCommerce Subscriptions.
* Dev - Usage of \WC_Subscriptions_Core_Plugin::get_plugin_version() is no longer recommended for version detection. \WC_Subscriptions_Core_Plugin::get_library_version() should be used instead.
* Add - New wcs_get_orders_with_meta_query() helper function to query for orders and subscriptions.
* Update - Replace instances of `get_posts()` across codebase with new wcs_get_orders_with_meta_query() function.